--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shortest-path-visualizer",
+  "name": "path-visualizer",
   "version": "0.1.0",
   "private": true,
   "homepage":"https://amithalpert.github.io/path-simulator",
